--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+oauth = "0.0.1"
 tokio = { version = "1", features = ["full"] }
 tokio-cron-scheduler = "0.13"
 reqwest = { version = "0.11", features = ["json"] }
