--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-oauth = "0.0.1"
+oauth = { version = "0.6", package = "oauth1-request" }
 tokio = { version = "1", features = ["full"] }
 tokio-cron-scheduler = "0.13"
-reqwest = { version = "0.11", features = ["json"] }
+reqwest = { version = "0.12.12", features = ["json"] }
 serde = { version = "1.0", features = ["derive"] }
 dotenv = "0.15"
