--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,12 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-oauth = { version = "0.6", package = "oauth1-request" }
 tokio = { version = "1", features = ["full"] }
 tokio-cron-scheduler = "0.13"
-reqwest = { version = "0.12.12", features = ["json"] }
-serde = { version = "1.0", features = ["derive"] }
 dotenv = "0.15"
+serde = { version = "1.0", features = ["derive"] }
+reqwest = { version = "0.12.9", features = ["json"] }
+serde_json = "1.0.13"
+anyhow = "1.0.95"
+chrono = "0.4.39"
+twapi-v2 = { version = "0.17.1", features = ["oauth10a"] }
