--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ serde_json = "1.0.13"
 anyhow = "1.0.95"
 chrono = "0.4.39"
 twapi-v2 = { version = "0.17.1", features = ["oauth10a"] }
+axum = { version = "0.8.1", features = ["default"] }
